endpoint de traer loans funcionando
